--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
