--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-google-maps/api": "^2.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
@@ -30,6 +31,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-places-autocomplete": "^7.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -39,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-places-autocomplete": "^7.2.14",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
